--- a/src/index.css
+++ b/src/index.css
@@ -49,8 +49,8 @@ a {
 
 .btn {
   padding: 2rem 6rem;
-  background: #4c6e97;
-  color: white;
+  background: #f4f808;
+  color: rgb(155, 138, 138);
   font-size: 2rem;
   text-transform: uppercase;
 }
@@ -93,7 +93,7 @@ nav ul {
 /* Hero Section */
 
 .hero {
-  background: linear-gradient(rgba(0, 0, 0, 0.5), transparent), url(./assets/hero-background.jpg);
+  background: linear-gradient(rgba(0, 0, 0, 0.5), transparent), url(https://1.bp.blogspot.com/-hdqmK_H7VbY/Xflra6ceWMI/AAAAAAAARoU/z0m3rOSvwfYky5JK5QeColSoOy_pB8OeACLcBGAsYHQ/s1600/Rap%2Bbooks%2B2c.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -118,7 +118,7 @@ nav ul {
 /* Featured Books and Books Section */
 
 .featured-head {
-  background: #343c44;
+  background: #141414;
   padding: 2rem;
   color: white;
   display: flex;
@@ -163,7 +163,7 @@ nav ul {
 
 .book-link {
   flex: 1 1 100rem;
-  background: #55606c;
+  background: #1c1d1c;
   font-size: 1.7rem;
   width: 100%;
   height: 100%;
